fixed paths behind buttons on user profile

--- a/app/assets/stylesheets/user-home-page.scss
+++ b/app/assets/stylesheets/user-home-page.scss
@@ -7,6 +7,7 @@ $translucent-form-overlay-max-width: 800px;
   background-color: rgba(54, 54, 54, 0.8);
   padding: 20px;
   color: white;
+  border-radius: 10px;
 
   .columns.row {
     display: block;
